Added PE to plots and intro paragraphs to results chapter

--- a/glossary.tex
+++ b/glossary.tex
@@ -33,6 +33,7 @@
 \newacronym{MASE}{MASE}{Mean Absolute Scaled Error}
 \newacronym{AIC}{AIC}{Akaike's Information Criteria}
 \newacronym{BIC}{BIC}{Bayesian Information Criteria}
+\newacronym{PE}{PE}{Percentage Error}
 
 \newacronym{IMU}{IMU}{Inertial Measurement Unit}
 \newacronym{GPS}{GPS}{Global Positioning System}
