--- a/results/plots/cable_length_vs_train_time_wind.tex
+++ b/results/plots/cable_length_vs_train_time_wind.tex
@@ -3,7 +3,7 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = Length of training data,
-            ylabel = Estimated cable length,
+            ylabel = Percentage Error,
             x unit = \si{\second},
             y unit = \%,
             xmin = 0,       xmax = 15,
