--- a/system_id/white_black_box.tex
+++ b/system_id/white_black_box.tex
@@ -20,22 +20,22 @@
         which determines values for the parameters used in die model.
 
         \paragraph 
-        This approach is used by \cite{Erasmus2020} and \cite{Slabber2020} for swing damping control of a quadrotor with an unknown suspended payload.
+        This approach is used by \cite{Erasmus2020} and \cite{Slabber2020} for swing damping control of a mulitrotor with an unknown suspended payload.
         The system was modelled as two rigid bodies connected by a link and the following assumptions were made regarding the suspended payload:
         \begin{itemize}
             \item The payload is a point mass.
             \item The link is massless.
             \item The link is rigid.
-            \item The link is attached to the \gls{CoM} of the quadrotor.
+            \item The link is attached to the \gls{CoM} of the mulitrotor.
         \end{itemize}
-        The only unknown parameters in the quadrotor and payload model is the payload mass and the link length.
+        The only unknown parameters in the mulitrotor and payload model is the payload mass and the link length.
         These parameters are first estimated and then inserted into the predefined, linearised model.
         This model is used by a \gls{LQR} controller to damp swing angles while also controlling the vehicle.
 
         \paragraph 
         The approach works well for systems with predictable dynamics, but is not very adaptable to systems with slightly different dynamics.
-        The payload considered by \cite{Erasmus2020} and \cite{Slabber2020} is limited to a small rigid mass suspended from the quadrotor by a non-stretching cable. 
-        In this configuration it was shown that a \gls{LQR} controller successfully controls a quadrotor while minimising payload swing angles.
+        The payload considered by \cite{Erasmus2020} and \cite{Slabber2020} is limited to a small rigid mass suspended from the mulitrotor by a non-stretching cable. 
+        In this configuration it was shown that a \gls{LQR} controller successfully controls a mulitrotor while minimising payload swing angles.
         However, if a payload or cable is used that violates one of the modelling assumptions, the predefined model no longer accurately represent the system.
         Many payloads which are considered for practical drone deliveries do not conform to these assumptions.
         Since the controller is dependent on this model, the mismatch between the model and actual dynamics may result in undesirable controller behaviour.
@@ -53,16 +53,16 @@
         \paragraph
         Dynamical models can be categorised as either non-linear or linear models.
         Non-linear models are often more accurate than linear models because complex, real-world dynamics are better approximated by non-linear systems.
-        The dynamics of a quadrotor and suspended payload are also non-linear.
-        % Examples of black box models with quadrotors and payloads in literature ???
+        The dynamics of a mulitrotor and suspended payload are also non-linear.
+        % Examples of black box models with mulitrotors and payloads in literature ???
 
         \paragraph
         However, non-linear models are inherently more complex than linear models. 
         Controllers based on non-linear models are usually more computationally complex than those with linear models.
-        The control architectures used for quadrotors in practical applications are mostly implemented on onboard hardware.
+        The control architectures used for mulitrotors in practical applications are mostly implemented on onboard hardware.
         Therefore there is value in low-complexity, linear models because these may be simple enough to execute on low cost hardware.
         % trade-off between accuracy and complexity.??
-        Non-linear models may require control implementations that are too computationally expensive and may not be practically realisable on the available hardware on a quadrotor.
+        Non-linear models may require control implementations that are too computationally expensive and may not be practically realisable on the available hardware on a mulitrotor.
         
         \paragraph
         \gls{DMDc} and \gls{HAVOK} are the two data-driven system identification methods investigated in this work. 
@@ -71,7 +71,7 @@
         but at the cost of greater computational complexity.
         % \murray{Name more techniques ??}
         \gls{DMDc} and \gls{HAVOK} are less computationally complex and their models are suitable for linear \gls{MPC}, which is significantly faster than non-linear \gls{MPC}.
-        This is desirable for a practical quadrotor implementation, where onboard computational power is limited.
+        This is desirable for a practical mulitrotor implementation, where onboard computational power is limited.
         These techniques and their implementations are explained in the sections below.
         
         % \paragraph
