--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -3,12 +3,12 @@
 \chapter{Modelling}
 \label{chap:modelling}
 
-This chapter discusses the mathematical modelling of a quadrotor with a suspended
-payload which is based on a practical quadrotor UAV named Honeybee.
+This chapter discusses the mathematical modelling of a mulitrotor with a suspended
+payload which is based on a practical mulitrotor UAV named Honeybee.
 The model is first derived as a \gls{2D} model.
 The system identification and control system techniques in later chapters will then be explained based on the \gls{2D} model to avoid unnecessary complexity.
 Finally, it will be described how this model and the techniques in later chapters are extended to the 3D case.
-This 3D mathematical model will be used in a nonlinear simulation of a quadrotor and suspended payload.
+This 3D mathematical model will be used in a nonlinear simulation of a mulitrotor and suspended payload.
 1
 \section{Coordinate frames}
 \section{States}
