--- a/results/plots/cable_length_vs_train_time.tex
+++ b/results/plots/cable_length_vs_train_time.tex
@@ -3,7 +3,7 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = Length of training data,
-            ylabel = Estimated cable length,
+            ylabel = Percentage Error,
             x unit = \si{\second},
             y unit = \%,
             xmin = 0,   xmax = 15,
@@ -44,10 +44,11 @@
         table[x = train_time, y = percentage_error, col sep = comma] 
         {results/csv/cable_length_vs_train_time_Prac_2021-08-20_03_l-1_mp-0.2_wind-0.5.csv_10_1.csv};
         \addlegendentry{$m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter}}
-        
+
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{}
+    \caption{Plot of the error in cable length estimation as a function of length of training data 
+    (wind speed $\approx~$\SI{0.5}{\metre/\second})}
     \label{fig:cable_length_vs_train_time}
 \end{figure}
