--- a/results/results.tex
+++ b/results/results.tex
@@ -105,7 +105,7 @@
         \FloatBarrier\subsection{Simple payload cable length estimation}
             
             \paragraph
-            The \gls{PE} for the cable length estimation is calculated as,
+            The \gls{PE} for the cable length estimation is calculated here as,
             \begin{equation}
                 PE = \frac{ l_{actual} - l_{estimated} }{ l_{actual} } \times 100 \%,
             \end{equation}
