--- a/results/plots/wind_Ttrain.tex
+++ b/results/plots/wind_Ttrain.tex
@@ -33,12 +33,17 @@
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {results/csv/NMAE_vs_Ntrain_Prac_2021-08-12_03_manual_x_vel_steps_2mps.csv_dmd_angle.csv};
-        \addlegendentry{2.0 m/s winds}
+        \addlegendentry{2 m/s winds}
 
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {results/csv/NMAE_vs_Ntrain_Prac_2021-08-12_02_manual_x_vel_steps_4mps.csv_dmd_angle.csv};
-        \addlegendentry{4.0 m/s winds}
+        \addlegendentry{4 m/s winds}
+
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
+        {results/csv/NMAE_vs_Ntrain_Prac_2021-08-26_01_l-1_mp-0.2_wind-6.csv_dmd_angle.csv};
+        \addlegendentry{6 m/s winds}
 
         \end{axis}
     \end{tikzpicture} 
