--- a/system_id/plots/FFT_vel_step.tex
+++ b/system_id/plots/FFT_vel_step.tex
@@ -33,5 +33,5 @@
     \end{tikzpicture} 
     
     \caption{The single-sided amplitude spectrum of the FFT}
-    \label{fig:FFT_pos_step}
+    \label{fig:FFT_vel_step}
 \end{subfigure}
