--- a/system_id/plots/vel_step_single_pend.tex
+++ b/system_id/plots/vel_step_single_pend.tex
@@ -7,7 +7,7 @@
             x unit = \si{\second},
             y unit = \si{\radian},
             xmin = 0,   xmax = 15,
-            ymin = -0.8,  ymax = 0.8,
+            ymin = -0.2,  ymax = 0.1,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -26,13 +26,17 @@
         ]
         
         \pgfplotsset{cycle list shift=1}
+        % \addplot+[mark = none, style = solid, ultra thick] 
+        % table[x = time, y = theta, col sep = comma] 
+        % {system_id/csv/pos_step_SITL_single_pos_step_m0.3_l1.csv.csv};
+
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = theta, col sep = comma] 
-        {system_id/csv/pos_step_SITL_single_pos_step_m0.3_l1.csv.csv};
+        {system_id/csv/single_step_predictions_SITL_x_vel_noise_l1_m0-3.csv.csv};
 
         \end{axis}
     \end{tikzpicture} 
     
     \caption{Position step response of the payload swing angle}
-    \label{fig:pos_step_single_pend}
+    \label{fig:vel_step_single_pend}
 \end{subfigure}
