Continued writing for param estimation of prac data

--- a/results/plots/prac_singular_values.tex
+++ b/results/plots/prac_singular_values.tex
@@ -39,6 +39,6 @@
     \end{tikzpicture} 
     
     \caption{Significant and truncated singular values of a \gls{HAVOK} model produced from practical data
-    ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}, $T_{train} =$~\SI{60}{\second}.)}
+    ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}, $T_{train} =$~\SI{60}{\second}.)}
     \label{fig:prac_singular_values}
 \end{figure}
