--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -39,7 +39,7 @@
     \paragraph
     The training data consists of full-state measurements, $\bm{x}_k$, and corresponding inputs, $\bm{u}_k$, 
     taken at regular intervals of $\Delta t = T_s$, during a simulated flight with Cascaded \gls{PID} control.
-    In a practical flight, these time-series measurements need to be saved in memory because it is usd as a single batch by \gls{DMD}.
+    In a practical flight, these time-series measurements need to be saved in memory because it is used as a single batch by \gls{DMD}.
     Note that \gls{DMD} can be applied in a recursive manner as described in \cite{Noack2016}, 
     However this implementation is not considered because memory size will not be a limitation since a companion computer will be used.
     
