--- a/system_id/plots/MAE_diff.tex
+++ b/system_id/plots/MAE_diff.tex
@@ -39,6 +39,6 @@
     \end{tikzpicture} 
     
     \caption{\gls{DMD} and \gls{HAVOK} error of time derivative of predictions for different lengths of noisy training data
-    ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}).}
+    ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}).}
     % \label{fig:havok_vs_dmd_noise}
 \end{figure}
