--- a/system_id/plots/MAE_vs_Ts.tex
+++ b/system_id/plots/MAE_vs_Ts.tex
@@ -39,6 +39,6 @@
     \end{tikzpicture} 
     
     \caption{\gls{DMD} and \gls{HAVOK} predictions error for different sample times of noisy training data
-    ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_{train} =$~\SI{60}{\second}.)}
+    ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_{train} =$~\SI{60}{\second}.)}
     % \label{fig:havok_vs_dmd_noise}
 \end{figure}
