--- a/system_id/plots/acc_sp.tex
+++ b/system_id/plots/acc_sp.tex
@@ -34,6 +34,6 @@
     \end{tikzpicture} 
     
     \caption{Accelleration setpoint training data from random velocity step inputs
-        ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter})}
+        ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter})}
     \label{fig:acc_sp}
 \end{figure}
