--- a/system_id/plots/noise_vs_no_noise.tex
+++ b/system_id/plots/noise_vs_no_noise.tex
@@ -39,6 +39,6 @@
     \end{tikzpicture} 
     
     \caption{\gls{HAVOK} prediction errors for different lengths of training data with and without noise 
-    ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}).}
+    ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}).}
     \label{fig:noise_vs_no_noise}
 \end{figure}
