--- a/system_id/plots/prediction_single_pend_black.tex
+++ b/system_id/plots/prediction_single_pend_black.tex
@@ -49,6 +49,6 @@
     \end{tikzpicture} 
     
     \caption{Data-driven model predictions of a single pendulum for a North velocity step input
-        ($m =$~\SI{0.3}{\kilo\gram}, $l =$~\SI{1}{\meter}).}
+        ($m_p =$~\SI{0.3}{\kilo\gram}, $l =$~\SI{1}{\meter}).}
     \label{fig:prediction_single_pend_black}
 \end{figure}
