--- a/system_id/plots/training_data.tex
+++ b/system_id/plots/training_data.tex
@@ -39,6 +39,6 @@
     \end{tikzpicture} 
     
     \caption{Example of training data with random velocity step inputs
-        ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter})}
+        ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter})}
     \label{fig:training_data}
 \end{figure}
