--- a/results/plots/havok_vs_dmd_Ttrain_2mps.tex
+++ b/results/plots/havok_vs_dmd_Ttrain_2mps.tex
@@ -39,6 +39,6 @@
     \end{tikzpicture} 
     
     \caption{\gls{DMD} and \gls{HAVOK} prediction errors for different lengths of practical training data
-    ($m =$~\SI{0.206}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}).}
+    ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}).}
     \label{fig:havok_vs_dmd_Ttrain_2mps}
 \end{figure}
