--- a/results/results.tex
+++ b/results/results.tex
@@ -29,12 +29,13 @@
         As discussed in Chapter~\ref{chap:system_id}, 
         generating data for the parameter estimation techniques involves two flight stages.
         Firstly, the mulitrotor hovers with the suspended payload to gather data for payload mass estimation.
-        Then the mulitrotor is commanded with a velocity step setpoint 
-        to stimulate the swinging payload system for cable length estimation.
+        Then a velocity step setpoint is commanded
+        to stimulate the swinging payload system and gather data for cable length estimation.
+        The same methodology is followed for both simulated and practical flights.
 
         \paragraph
-        For the data-driven techniques, the methodology used to generate training and testing data from practical flights
-        also follows the same general procedure as specified for simulation data in Section~\ref{sec:sys_id_methodology}:
+        For the data-driven techniques, the generation of practical training and testing data
+        also follows the same general methodolgy as simulated flights:
         \begin{enumerate}
             \item Data logging starts when the mulitrotor is armed
             \item Takeoff and hover with the qaudrotor
@@ -44,8 +45,25 @@
             \item Download data log from the mulitrotor
             \item Split data into separate training and testing periods
             \item Build a model from the training data
-            \item Calculate an error metric for the model from the testing data
+            \item Perform model predictions over the testing data to calculate an error metric
         \end{enumerate}
+
+        \paragraph
+        Figure~\ref{fig:honeybee_with_payload} shows Honeybee with a suspended payload during a practical flight.
+        Numerous flights were performed with different 
+        payload masses, 
+        cable lengths, 
+        wind conditions, 
+        and dynamic payloads.
+        The system identification methods were then performed on data resulting from this wide range of different use cases.
+        
+        \paragraph
+        The major differences between the simulated and practical flights involve the attachment of the payload and wind disturbances.
+        In simulation, the payload cable is attached to the exact \gls{CoM} of the mulitrotor.
+        However for practical flights the cable is attached slightly below the \gls{CoM} of Honeybee due to mechanical constraints.
+        Practical flights are also influenced by wind disturbances which was not considered in simulation.
+        The measurement noise experienced by a practical multirotor may also differ from the noise models used in simulation.
+        Therefore this effect is also investigated in the sections below.
 
         \begin{figure}[!htb]
             \centering
@@ -53,21 +71,6 @@
             \caption{Practical flight with Honeybee and a suspended payload}
             \label{fig:honeybee_with_payload}
         \end{figure}
-
-        \paragraph
-        Figure~\ref{fig:honeybee_with_payload} shows Honeybee in flight with a suspended payload.
-        Numerous flights were performed with different 
-        payload masses, 
-        cable lengths, 
-        wind conditions, 
-        and even with a more complex elongated payload.
-        The system identification methods were then performed on the data resulting from this range of different use cases.
-        The major differences between the simulations and practical flights involve the attachment of the payload and wind disturbances.
-        In simulation, the payload cable is attached to the exact \gls{CoM} of the mulitrotor.
-        However, due to practical constraints, the cable is attached slightly below the \gls{CoM} of Honeybee.
-        Practical flights are also influenced by wind disturbances, therefore this effect is also investigated in the sections below.
-        In this chapter, wind conditions are referenced by the wind speed recorded by the website, www.yr.no, 
-        for the hour of day of the flight.
         
         % \begin{itemize}
         %     \item Method for generating data
@@ -89,6 +92,12 @@
         % and need to extrapolate the dynamics of other step sizes.
         
     \FloatBarrier\section{Parameter estimation with practical data}
+
+        \paragraph
+        In Section~\ref{sec:param_estimation}, parameter estimation was performed with simulation data.
+        It was shown that the models with the estimated parameter values provide reasonably accurate representations of the simulated dynamics.
+        In this section practical flight data is used for paramater estimation.
+        The effect of wind on the parameter estimation techniques will also be investigated.
         
         %% ?? Add this if there is time
         % \subsection{Mass estimation} 
@@ -106,13 +115,34 @@
         \FloatBarrier\subsection{Simple payload cable length estimation}
             
             \paragraph
-            The \gls{PE} for the cable length estimation is calculated here as,
+            As discussed in Section~\ref{sec:length_estimation}, an \gls{FFT} of the payload oscillations 
+            is used to estimate the natural frequency of the suspended payload, 
+            and the natural frequency is used to calculate the estimated cable length.
+            \gls{PE} is the error metric used to quantify the estimation accuracy.
+            The \gls{PE} of the cable length estimation is calculated as,
             \begin{equation}
-                PE = \frac{ l_{actual} - l_{estimated} }{ l_{actual} } \times 100 \%,
+                PE = \frac{ l_{actual} - l_{estimated} }{ l_{actual} } \times 100 \% ,
             \end{equation}
             where $l_{actual}$ is the actual cable length and $l_{estimated}$ is the estimated cable length.
-                
+
+            \paragraph
+            Figure~\ref{fig:cable_length_vs_train_time} shows the \gls{PE} of the cable length estimation 
+            with different payload masses and cable lengths.
+            Note that for each payload configuration, 
+            the estimation converges to a constant error after a sufficient length of training data.
+            %% ?? Add length of training data required to all techniques to compare white-box length to black box length
+            For these payload configurations the converged \gls{PE} ranges from 18.9~\% to 32.4~\%.
+            These errors may be due to the large difference between theoretical and the damped natural frequency.
+            It appears that the \gls{PID} controllers damp the payload oscillations significantly, 
+            which changes oscillation frequency of the payload.
+            Hence, an incorrect length is calculated from the frequency peak identified in the \gls{FFT}.
+            
             \input{results/plots/cable_length_vs_train_time.tex}
+
+            \paragraph
+            Figure~\ref{fig:cable_length_vs_train_time_wind} shows the \gls{PE} of cable length estimation 
+            for flights with different wind conditions.
+            All flights were performed with the same payload parameters.
 
             \input{results/plots/cable_length_vs_train_time_wind.tex}
         
@@ -140,6 +170,8 @@
             the length of training data used in the model has a large effect on prediction accuracy.
             The length of training data required for accurate models is largely influenced by the amount of wind disturbance during flight.
             Figure~\ref{fig:wind_Ttrain} shows prediction error as a function of training data length for different wind conditions.
+            Wind conditions are referenced here by the wind speed recorded by the website, www.yr.no, 
+            for the hour of day of the flight.
             Its clear that the prediction error decreases with increasing wind speeds.
             It appears that for wind speeds lower than \SI{2}{\metre/\second}, 
             the minimum prediction error is not significantly improved with decreasing wind speeds.
