--- a/system_id/plots/different_state_vectors.tex
+++ b/system_id/plots/different_state_vectors.tex
@@ -39,6 +39,6 @@
     \end{tikzpicture} 
     
     \caption{Prediction NMAE for \gls{HAVOK} models using either angle or angular rate measurements 
-    ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}).}
+    ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}).}
     \label{fig:different_state_vectors}
 \end{figure}
