--- a/results/plots/double_pend_cable_length_vs_train_time.tex
+++ b/results/plots/double_pend_cable_length_vs_train_time.tex
@@ -27,11 +27,12 @@
 
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = train_time, y = estimated_length, col sep = comma] 
-        {results/csv/cable_length_vs_train_time_Prac_2021-08-23_01_l-0.5_mp-0.2_wind-0.5.csv_10_0.5.csv};
+        {results/csv/cable_length_vs_train_time_Prac_2021-08-23_04_double_pend_m1_0.2_m2_0.1_l1-0.5_l2_0.62_wind-0.5.csv_20_0.5.csv};
         
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{}
+    \caption{Estimated cable length as a function of length of training data for a dynamic payload
+    ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter}) }
     \label{fig:double_pend_cable_length_vs_train_time}
 \end{figure}
